# copos

copos/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.in  global.c  global.h  main.c
copos/display/: Makefile.am  choosedevice.c  choosedevice.h  choosefile.c  choosefile.h  choosemodule.c  choosemodule.h  generate.c  generate.h  introduction.c  introduction.h  mainwindow.c  mainwindow.h  picklaser.c  picklaser.h  positions.c  positions.h  recorder.c  recorder.h  visualization.c  visualization.h
copos/engine/: Makefile.am  collector.c  collector.h  imageanalyse.c  imageanalyse.h  matrix.c  matrix.h  perspectivecreator.c  perspectivecreator.h  point2d.c  point2d.h  point3d.c  point3d.h  storage.c  storage.h
copos/plugins/: Makefile.am  confextensions.c  confextensions.h  confgenericv4l.c  confgenericv4l.h  confphilips.c  confphilips.h  confsizefrm.c  confsizefrm.h  confvidctrl.c  confvidctrl.h  genericv4l.c  genericv4l.h  philips740k.c  philips740k.h  webcam.h
copos/po/: POTFILES.in  copos.pot  fr_FR.po  gen_fr_FR.sh
qrust/: Makefile.am  README  bootstrap.sh  configure.in
qrust/display/: Makefile.am  crustview.cpp  dlggenerate.cpp  dlggenerate.h  mainwindow.cpp  mainwindow.h  octreeview.cpp
