dnl Process this file with autoconf to produce a configure script.

AC_INIT(global.c)
AM_INIT_AUTOMAKE(copos, "0.5")
AM_CONFIG_HEADER(config.h:config.h.in)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC
AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, true, false)
AC_PROG_INSTALL

dnl Checks for libtool.
AC_PROG_LIBTOOL
dnl Checks for libraries.
PKG_CHECK_MODULES(GLIB2, glib-2.0 gobject-2.0 gthread-2.0 gmodule-2.0)
AC_SUBST(GLIB2_CFLAGS)
AC_SUBST(GLIB2_LIBS)
PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.0.0)
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)

PKG_CHECK_MODULES(GDKPIXBUF, gdk-pixbuf-2.0)
AC_SUBST(GDKPIXBUF_CFLAGS)
AC_SUBST(GDKPIXBUF_LIBS)

PKG_CHECK_MODULES(GTKGL, gtkglext-1.0)
AC_SUBST(GTKGL_CFLAGS)
AC_SUBST(GTKGL_LIBS)

GETTEXT_PACKAGE=copos
AC_DEFINE([GETTEXT_PACKAGE], "copos", [The Gettext package])
AC_SUBST(GETTEXT_PACKAGE)
ALL_LINGUAS="fr_FR"
AM_GLIB_GNU_GETTEXT

dnl ##################################################
dnl # Set PACKAGE_LOCALE_DIR in config.h.
dnl ##################################################
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [The locale dir of the package])
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale", [The locale dir of the package])
fi

dnl ##################################################
dnl # Set PACKAGE_DATA_DIR in config.h.
dnl ##################################################
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    PACKAGE_DATA_DIR="${ac_default_prefix}/share/${PACKAGE}"
    AC_SUBST(PACKAGE_DATA_DIR)
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "$PACKAGE_DATA_DIR", [The data dir of the package])
  else
    PACKAGE_DATA_DIR="${prefix}/share/${PACKAGE}"
    AC_SUBST(PACKAGE_DATA_DIR)
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "$PACKAGE_DATA_DIR", [The data dir of the package])
  fi
else
  PACKAGE_DATA_DIR="${datadir}/${PACKAGE}"
  AC_SUBST(PACKAGE_DATA_DIR)
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "$PACKAGE_DATA_DIR", [The data dir of the package])
fi

dnl ##################################################
dnl # Check for pwc
dnl ##################################################

AC_ARG_ENABLE([pwc],
              [AC_HELP_STRING([--disable-pwc],
                              [disable Philips740K module compilation])], ,
              [pwc=yes])

AC_ARG_WITH(i_pwc,
	    [  --include-pwc=DIR       pwc-ioctl.h is installed in DIR [[default=/usr/src/linux/drivers/usb/media/]]],
	    i_pwc=$withval,
	    i_pwc="/usr/src/linux/drivers/usb/media/")
if test x${pwc} = xyes;
then
  PWC="YES"
  AC_CHECK_HEADERS(${i_pwc}/pwc-ioctl.h,PWC_CFLAGS="-I/$i_pwc", AC_MSG_ERROR([Couldn't find pwc-ioctl.h in the directory ${i_pwc} (set --with-pwc=no)]))
else
  pwc="no"
  PWC_CFLAGS=""
  PWC="NO"
fi
AM_CONDITIONAL(TEST_PWC, test x$pwc = xyes)
AC_SUBST(PWC)
AC_SUBST(PWC_CFLAGS)

dnl AC_CHECK_HEADERS(${pwc}/pwc-ioctl.h,PWC="-I/$pwc", AC_MSG_ERROR([Couldn't find pwc-ioctl.h in the directory ${pwc}]))



dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile engine/Makefile display/Makefile plugins/Makefile po/Makefile.in )

dnl ##################################################
dnl # Print summary
dnl ##################################################

echo
echo "         "${BLD_ON}"Copos Configuration Summary"${BLD_OFF}
echo "===================================================="
echo
echo "  Generic Video 4 Linux : by default"
echo "  Compile Philips740K   : $pwc"
echo
echo "  Setup finished. Now run:"
echo
echo "  $ "${BLD_ON}"make"${BLD_OFF}
echo "  # "${BLD_ON}"make install"${BLD_OFF}
echo
echo "  (or use "${BLD_ON}"gmake"${BLD_OFF}" when make on your platform isn't GNU make)"
echo "===================================================="
echo "         "${BLD_ON}"cirdan@mail.berlios.de"${BLD_OFF}