noinst_LIBRARIES = libdisplay.a
noinst_HEADERS = $(wildcard *.h)

INCLUDES = -I.. @GTKGL_CFLAGS@

libdisplay_a_SOURCES = trackball.c trackball.h \
                  visualization.c visualization.h \
                  generate.c generate.h \
                  positions.c positions.h \
                  picklaser.c picklaser.h \
                  recorder.c recorder.h \
                  choosemodule.c choosemodule.h \
                  choosedevice.c choosedevice.h \
                  introduction.c introduction.h \
                  mainwindow.c mainwindow.h