noinst_LIBRARIES = libdisplay.a
noinst_HEADERS = $(wildcard *.h)

INCLUDES = -I.. @GTKGL_CFLAGS@

libdisplay_a_SOURCES = trackball.c trackball.h \
                  visualization.c visualization.h \
                  generate.c generate.h \
                  positions.c positions.h \
                  picklaser.c picklaser.h \
                  choosefile.c choosefile.h \
                  introduction.c introduction.h \
                  mainwindow.c mainwindow.h
