noinst_LIBRARIES = libengine.a
noinst_HEADERS = $(wildcard *.h)

INCLUDES = -I.. @GDKPIXBUF_CFLAGS@

libengine_a_SOURCES =   point2d.c point2d.h \
			point3d.c point3d.h \
			matrix.c matrix.h \
			perspectivecreator.c perspectivecreator.h \
			imageanalyse.c imageanalyse.h \
			storage.c storage.h \
			collector.c collector.h \